# chat-metrics

./: .gitignore  README.md
api/: pyproject.toml
api/api/: settings.py
api/core/: urls.py
api/my_messages/: apps.py  urls.py  views.py
vue-app/: package.json
vue-app/src/: App.vue
vue-app/src/components/: Icon.vue
vue-app/src/components/filepicker/: FilePicker.vue
vue-app/src/components/header/: MainHeader.vue  Navbar.vue
vue-app/src/components/icons/: DiceIcon.vue  HomeIcon.vue
vue-app/src/components/layouts/: BaseLayout.vue
vue-app/src/components/sheet/: Sheet.vue
vue-app/src/router/: index.ts
vue-app/src/views/: DatabaseView.vue  HomeView.vue
