[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Josafa Verissimo Gomes <josafaverissimo98@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
