[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Josafa Verissimo Gomes <josafaverissimo98@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.1"
ipython = "^8.24.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
